--- a/package.json
+++ b/package.json
@@ -12,20 +12,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.0",
-    "@angular/cdk": "^11.2.0",
+    "@angular/cdk": "^11.2.2",
     "@angular/common": "~11.2.0",
     "@angular/compiler": "~11.2.0",
     "@angular/core": "~11.2.0",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.2.0",
-    "@angular/material": "^11.2.0",
+    "@angular/material": "^11.2.2",
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
